--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,9 +1,12 @@
-html, body {
-    width: 100%;
-    height: 100%;
-} 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  font-family: "Wotfard", Futura, -apple-system, sans-serif;
+}
 
 #__next {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
