Awesome dark/light toggle

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -4,6 +4,7 @@ body {
   height: 100%;
   margin: 0;
   font-family: "Wotfard", Futura, -apple-system, sans-serif;
+  color: var(--color-text);
 }
 
 #__next {
