--- a/styles/global.scss
+++ b/styles/global.scss
@@ -12,10 +12,19 @@ body {
   height: 100%;
   width: 100%;
   user-select: none;
-  // font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir,
-  //   helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial, sans-serif;
   position: fixed;
-  overflow: hidden;
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    background: var(--scrollbar-track-color);
+  }
+  ::-webkit-scrollbar-thumb {
+    background: var(--scrollbar-thumb);
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--scrollbar-thumb-hover);
+  }
 }
 
 #__next {
