add sound menu icon

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -38,9 +38,15 @@ body {
   .hide-mobile {
     display: none;
   }
+  .full-width-mobile {
+    width: 100%;
+  }
 }
 @media (min-width: 481px) {
   .hide-desktop {
     display: none;
+  }
+  .center-width-desktop {
+    width: 60%;
   }
 }
