--- a/styles/global.scss
+++ b/styles/global.scss
@@ -3,7 +3,8 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  font-family: "Wotfard", Futura, -apple-system, sans-serif;
+  font-weight: 300;
+  font-family: Arial, Helvetica, sans-serif;
   color: var(--color-text);
   /* https://codesandbox.io/embed/j0y0vpz59 */
   overscroll-behavior-y: contain;
@@ -12,21 +13,22 @@ body {
   height: 100%;
   width: 100%;
   position: fixed;
-  ::-webkit-scrollbar {
-    width: 10px;
-  }
-  ::-webkit-scrollbar-track {
-    background: var(--scrollbar-track-color);
-  }
-  ::-webkit-scrollbar-thumb {
-    background: var(--scrollbar-thumb);
-  }
-  ::-webkit-scrollbar-thumb:hover {
-    background: var(--scrollbar-thumb-hover);
-  }
-  ::-webkit-scrollbar-corner {
-    background-color: var(--scrollbar-track-color);
-  }
+  // ::-webkit-scrollbar {
+  //   width: 10px;
+  //   // background: #0c1827;
+  // }
+  // ::-webkit-scrollbar-track {
+  //   background: var(--scrollbar-color); //var(--scrollbar-track-color);
+  // }
+  // ::-webkit-scrollbar-thumb {
+  //   background: var(--scrollbar-thumb);
+  // }
+  // ::-webkit-scrollbar-thumb:hover {
+  //   background: var(--scrollbar-thumb-hover);
+  // }
+  // ::-webkit-scrollbar-corner {
+  //   background-color: var(--scrollbar-track-color);
+  // }
 }
 
 #__next {
