--- a/styles/global.scss
+++ b/styles/global.scss
@@ -49,3 +49,12 @@ body {
     display: none !important;
   }
 }
+
+rect,
+path {
+  transition: fill 0.5s ease;
+}
+footer,
+main {
+  transition: background-color 0.5s ease;
+}
